--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-three/rapier": "^2.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.27.0",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
     "meshline": "^3.3.1",
     "next": "16.1.3",
